operator/pkg/gateway-api/testdata/gateway/gateway-invalid-parameters-ref/input/gateway-invalid-parameters-ref.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-invalid-parameters-ref
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "cilium"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
  infrastructure:
    parametersRef:
      group: invalid.io
      kind: InvalidParameters
      name: invalid
